fixing list text overflow

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -82,6 +82,8 @@ body, #app, .main {
 }
 
 .comp-file-list {
+    overflow: hidden;
+
     ul {
         overflow-x: hidden;
         overflow-y: auto;
